--- a/Bizsolv Manpower Costing/src/view/NewFile.fxml
+++ b/Bizsolv Manpower Costing/src/view/NewFile.fxml
@@ -23,12 +23,8 @@
             <font>
                 <Font name="Corbel Light" size="24.0" />
             </font></Label>
-        <TextField fx:id="name" layoutX="30.0" layoutY="70.0" prefWidth="200.0" stylesheets="@GeneratePDF.css">
-            <font>
-                <Font name="Open Sans Light" size="16.0" />
-            </font></TextField>
         <TextField fx:id="address" layoutX="30.0" layoutY="150.0" stylesheets="@GeneratePDF.css" />
-        <ComboBox fx:id="location" layoutX="30.0" layoutY="235.0" prefWidth="150.0" promptText="NCR" stylesheets="@GeneratePDF.css" />
+        <ComboBox fx:id="locations" layoutX="30.0" layoutY="235.0" prefWidth="150.0" promptText="NCR" stylesheets="@GeneratePDF.css" />
         <ComboBox fx:id="rateType" layoutX="30.0" layoutY="315.0" prefWidth="150.0" promptText="Daily" stylesheets="@GeneratePDF.css" />
         <TextField fx:id="workingDays" layoutX="35.0" layoutY="390.0" stylesheets="@GeneratePDF.css" />
         <TextField fx:id="incentiveLeave" layoutX="265.0" layoutY="275.0" promptText="Optional" stylesheets="@GeneratePDF.css" />
@@ -68,5 +64,6 @@
             </font>
         </Button>
         <ComboBox fx:id="allowance" layoutX="265.0" layoutY="390.0" prefWidth="150.0" promptText="None" stylesheets="@GeneratePDF.css" />
+      <ComboBox fx:id="name" layoutX="30.0" layoutY="70.0" prefHeight="39.0" prefWidth="200.0" promptText="Employee Name" stylesheets="@GeneratePDF.css" />
     </children>
 </AnchorPane>
